# chat-app

./: index.html
backend/: Cargo.toml  Dockerfile  README.Docker.md  compose.yaml
backend/src/: main.rs
frontend/static/: script.js
src/: main.rs
static/: index.html  script.js
